--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -44,7 +44,7 @@
                         <a class="J_menuItem" href="{:url('admin/selfattribute/lst')}">自定义属性</a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="graph_peity.html">Peity</a>
+                        <a class="J_menuItem" href="{:url('admin/cars/clearimg')}">清除无效图片</a>
                     </li>
                     <li>
                         <a class="J_menuItem" href="graph_sparkline.html">Sparkline</a>
