--- a/application/index/view/member/memberershouchelist.html
+++ b/application/index/view/member/memberershouchelist.html
@@ -6,9 +6,11 @@
     <div class="box">
         <div class="userrightmenu">
             <span class="fr">您已发布二手车
-                <span class="orange01">3</span> 条，在售
-                <span class="orange01">3</span> 条，已售
-                <span class="orange01">0</span> 条。
+                <span class="orange01">{$carslist.status.total}</span> 条，上架
+                <span class="orange01">{$carslist.status.shelf}</span> 条，下架
+                <span class="orange01">{$carslist.status.unshelf}</span> 条，已售
+                <span class="orange01">{$carslist.status.sold}</span> 条，未审核
+                <span class="orange01">{$carslist.status.unaudited}</span> 条。
             </span>
             <a href="{:url('index/member/erchoucheadd')}">+发布二手车</a>
         </div>
@@ -36,22 +38,20 @@
                     {/if}
                     </td>
                 <td align="left">
-                    <p><a href="buycars/2015/08/20/71.html" target="_blank" class="f14 fb">浙江卡尔森 商务车 2014 款 商务豪华型</a>  </p>
+                    <p><a href="buycars/2015/08/20/71.html" target="_blank" class="f14 fb">{$vo.full_name}</a>  </p>
                     <p class="gray">排量： {$vo.gas} / 交强险时间：{$vo.insurance|date='Y年m月d日'} / 颜色：{$vo.color} / 行驶里程：{$vo.kilometer|format='%.2f'} 万公里 / 信息编号:{$vo.id}</p>
                     <p class="gray">刷新时间：{$vo.listtime|date="Y-m-d H:i:s"}</p>
                 </td>
-                <td align="center" class="orange01 f14">11.00万</td>
+                <td align="center" class="orange01 f14">{$vo.price|format='%.2f'}万</td>
                 <td align="center" class="acmenu">
-                    <p><a href="index.php?m=user&a=editcar&id=71&page=1">编辑</a> | <a href="index.php?m=user&a=refresh&id=71&page=1">刷新</a> | <a href="javascript:if(confirm('确实要删除吗?'))location='index.php?m=user&a=delcar&id=71&page=1'">删除</a></p>
-                    <p><a href="index.php?m=user&a=sellcar&sell=1&id=71&page=1">设置为已出售</a>
-                    </p>
+                    <p><a href="javascript:if(confirm('确实要删除吗?'))location='index.php?m=user&a=delcar&id=71&page=1'">删除</a></p>
                 </td>
             </tr>
             {/volist}
         </table>
-        <div class="page_list">
+        <!-- <div class="page_list">
             <span>共3条</span><span>第1/1页</span><a href='/simcms/index.php?m=user&a=carlist&page=1'>尾页</a>
-        </div>
+        </div> -->
     </div>
 </div>
 {/block}
