--- a/application/index/view/public/top.html
+++ b/application/index/view/public/top.html
@@ -2,10 +2,15 @@
 	<div class="top_main clearfix">
 		<div class="top_left">
 			欢迎来到二手车网！
+            {if $Think.cookie.member}
+            欢迎你 {$Think.cookie.member['member_name']}
+            <a href="{:url('index/member/membercenter')}">会员中心</a>
+            {else/}
             <span id="login">
                 <a href="{:url('index/login/login')}">[请登录]</a>&nbsp;&nbsp;&nbsp;新用户？
                 <a href="{:url('index/login/register')}">[请注册]</a>
             </span>
+            {/if}
         </div>
 		<div class="top_right">
 			<a href="/simcms/m/">手机端</a>&nbsp;&nbsp;|&nbsp;&nbsp;客服热线：<span class="orange01 fb">400-0000-000</span>
