--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -44,6 +44,9 @@
                         <a class="J_menuItem" href="{:url('admin/selfattribute/lst')}">自定义属性</a>
                     </li>
                     <li>
+                        <a class="J_menuItem" href="{:url('admin/cars/lst')}">车源管理</a>
+                    </li>
+                    <li>
                         <a class="J_menuItem" href="{:url('admin/cars/clearimg')}">清除无效图片</a>
                     </li>
                     <li>
