--- a/application/index/view/member/userleft.html
+++ b/application/index/view/member/userleft.html
@@ -36,7 +36,7 @@
         <h3>二手车管理</h3>
         <ul>
             <li><a href="{:url('index/member/ershouchelst')}">二手车管理</a></li>
-            <li><a href="/simcms/index.php?m=user&a=rentcarlist">租车管理</a></li>
+            <li><a href="{:url('index/member/rentcarslst')}">租车管理</a></li>
         </ul>
     </div>
     <div class="usermenu">
