--- a/application/admin/view/cars/lst.html
+++ b/application/admin/view/cars/lst.html
@@ -15,6 +15,44 @@
                     </ol>
                 </div>
             </div>
+            <div class="row ibox-content">
+                <div class="col-sm-2">
+                    <button class="btn btn-success" type="button" id="addBrand">
+                        <i class="fa fa-plus-square"></i>&nbsp;&nbsp;
+                        <span class="bold">添加母品牌</span>
+                    </button>
+                </div>
+                <div class="col-sm-10">
+                    <ul class="list-unstyled list-inline">
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'A'))}">A</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'B'))}">B</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'C'))}">C</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'D'))}">D</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'E'))}">E</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'F'))}">F</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'G'))}">G</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'H'))}">H</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'I'))}">I</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'J'))}">J</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'K'))}">K</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'L'))}">L</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'M'))}">M</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'N'))}">N</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'O'))}">O</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'P'))}">P</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'Q'))}">Q</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'R'))}">R</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'S'))}">S</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'T'))}">T</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'U'))}">U</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'V'))}">V</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'W'))}">W</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'X'))}">X</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'Y'))}">Y</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'Z'))}">Z</a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-12">
                     <div class="ibox float-e-margins">
@@ -52,7 +90,7 @@
                                                     <li><a href="{:url('admin/cars/verify',array('id'=>$vo.id))}">审核</a>
                                                     </li>
                                                     {/if}
-                                                    <li><a href="">删除</a>
+                                                    <li><a href="javascript:if(confirm('确认删除？')) location='{:url('admin/cars/del',array('id'=>$vo.id))}'">删除</a>
                                                     </li>
                                                 </ul>
                                             </div>
