--- a/application/index/view/member/rentcarslst.html
+++ b/application/index/view/member/rentcarslst.html
@@ -5,9 +5,6 @@
     <h2 class="usernav">租车信息列表</h2>
     <div class="box">
         <div class="userrightmenu">
-            <span class="fr">您已发布租车
-                <span class="orange01">1</span> 条。
-            </span>
             <a href="{:url('index/member/rentcarsadd')}">+发布租车</a>
         </div>
         <table cellspacing="0" cellpadding="0" width="100%"  class="listtable">
@@ -15,30 +12,34 @@
                 <th width="100">图</th>
                 <th>车型信息</th>
                 <th>报价</th>
+                <th>状态</th>
                 <th width="100">操作</th>
             </tr>
+            {volist name="rentcars" id="vo"}
             <tr bgcolor="#ffffff" onmouseover="style.backgroundColor='#f5f5f5'"  onmouseout="style.backgroundColor='#ffffff'">
                 <td align="center" width="100">
-                    <div class="noimg">未上传图片</div>
+                    <img src="__UPLOADS__/{$vo.img}" alt="" width="100">
                 </td>
                 <td align="left">
-                    <p><a href="rentcars/2018/06/21/99.html" target="_blank" class="f14 fb">一天一毛钱奔驰开回家</a></p>
-                    <p class="gray">品牌：奔腾B90 2014  / 车型：轿车</p>
-                    <p class="gray">刷新时间：2018-06-21 08:31:29</p>
+                    <p><a href="rentcars/2018/06/21/99.html" target="_blank" class="f14 fb">{$vo.title}</a></p>
+                    <p class="gray">{$vo.full_name}</p>
+                    <p class="gray">刷新时间：{$vo.listtime|date="Y年m月d日"}</p>
                 </td>
-                <td align="center" class="orange01 f14">10.00元/天</td>
+                <td align="center" class="orange01 f14">{$vo.dayprice}元/天|{$vo.monthprice}元/月</td>
+                <td align="center" class="orange01 f14">
+                    {switch $vo.status}
+                        {case value1 }已出租{/case}
+                        {case value0}未出租{/case}
+                        {default /}未审核
+                    {/switch}
+                </td>
                 <td align="center" class="acmenu">
-                    <a href="index.php?m=user&a=editrentcar&id=99&page=1">编辑</a> |
-                    <a href="javascript:if(confirm('确实要删除吗?'))location='index.php?m=user&ac=delrentcar&id=99&page=1'">删除</a> |
-                    <a href="index.php?m=user&a=refreshrentcar&id=99&page=1">刷新</a>
+                    <a href="javascript:if(confirm('确实要删除吗?'))location='index.php?m=user&ac=delrentcar&id=99&page=1'">
+                        删除</a>
                 </td>
             </tr>
+            {/volist}
         </table>
-        <div class="page_list">
-            <span>共1条</span>
-            <span>第1/1页</span>
-            <a href='/simcms/index.php?m=user&a=rentcarlist&page=1'>尾页</a>
-        </div>
     </div>
     <!-- </div> -->
 </div>
