--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -49,24 +49,21 @@
                     <li>
                         <a class="J_menuItem" href="{:url('admin/cars/clearimg')}">清除无效图片</a>
                     </li>
-                    <li>
-                        <a class="J_menuItem" href="graph_sparkline.html">Sparkline</a>
-                    </li>
-                    <li>
-                        <a class="J_menuItem" href="graph_metrics.html">图表组合</a>
-                    </li>
                 </ul>
             </li>
 
             <li>
                 <a href="#">
                     <i class="fa fa-car"></i>
-                    <span class="nav-label">系统管理</span>
+                    <span class="nav-label">租车管理</span>
                     <span class="fa arrow"></span>
                 </a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a class="J_menuItem" href="{:url('admin/brand/lst')}">品牌管理</a>
+                        <a class="J_menuItem" href="{:url('admin/rentcars/lst')}">车源管理</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/rentcars/clearimg')}">清除无效图片</a>
                     </li>
                     <li>
                         <a class="J_menuItem" href="{:url('admin/carmodel/lst')}">车型管理</a>
