--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -65,23 +65,21 @@
                     <li>
                         <a class="J_menuItem" href="{:url('admin/rentcars/clearimg')}">清除无效图片</a>
                     </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#">
+                    <i class="fa fa-newspaper-o"></i>
+                    <span class="nav-label">新闻管理</span>
+                    <span class="fa arrow"></span>
+                </a>
+                <ul class="nav nav-second-level">
                     <li>
-                        <a class="J_menuItem" href="{:url('admin/carmodel/lst')}">车型管理</a>
+                        <a class="J_menuItem" href="{:url('admin/news/cate')}">分类管理</a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="{:url('admin/level/lst')}">级别管理</a>
-                    </li>
-                    <li>
-                        <a class="J_menuItem" href="graph_rickshaw.html">Rickshaw</a>
-                    </li>
-                    <li>
-                        <a class="J_menuItem" href="graph_peity.html">Peity</a>
-                    </li>
-                    <li>
-                        <a class="J_menuItem" href="graph_sparkline.html">Sparkline</a>
-                    </li>
-                    <li>
-                        <a class="J_menuItem" href="graph_metrics.html">图表组合</a>
+                        <a class="J_menuItem" href="{:url('admin/rentcars/clearimg')}">清除无效图片</a>
                     </li>
                 </ul>
             </li>
